# weather

./: README.md  io.github.alexkdeveloper.weather.json  meson.build
data/: io.github.alexkdeveloper.weather.appdata.xml.in  io.github.alexkdeveloper.weather.desktop.in  io.github.alexkdeveloper.weather.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES
src/: application.vala  main.vala  meson.build  weather.gresource.xml  window.ui  window.vala
